# Exposure-Threat-Qualification-Report

./: .gitignore  MANUAL.txt  README.md  pyproject.toml  requirements.txt  setup_first_run.py
data/: cpe_map.json  oracle_support_dates.json  product_aliases.json
examples/: huht.csv  products.csv  products2.csv  products3.csv
oracle_cve_intel/: __init__.py  alias_enricher.py  api_client.py  cache_manager.py  cli.py  config.py  cve_enrichment.py  cve_mapper.py  detection_mapper.py  input_parser.py  models.py  normalizer.py  oracle_patch_resolver.py  prioritizer.py  report.py  runtime.py  support_checker.py  threat_context.py  utils.py
oracle_cve_intel/templates/: report.html.j2
scripts/: fetch_oracle_support_dates.py
tests/: test_cve_mapper.py
